--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bluebird": "^3.5.1",
     "cluster": "^0.7.7",
     "config": "^1.31.0",
+    "cors": "^2.8.4",
     "deep-equal": "^1.0.1",
     "express": "^4.16.3",
     "knex": "^0.15.2",
