--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
         "sourceType": "module"
     },
     "rules": {
-        "semi": [0]
+        "semi": [2, "always"],
+        "object-curly-spacing": [2, "always"]
     },
     "overrides": [
         {
