--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,8 @@
         {
             "files": [ "test/**/*" ],
             "rules": {
-                "no-undef": [0]
+                "no-undef": [0],
+                "no-unused-expressions": [0]
             }
         }
     ]
