--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "server:dev": "nodemon --require dotenv/config lib/server.js",
     "build": "babel app --out-dir lib",
     "build:dev": "babel --watch --skip-initial-build app --out-dir lib",
-    "mysql:start": "./bin/mysql-start.sh",
-    "mysql:stop": "./bin/mysql-stop.sh"
+    "mysql:start": "./bin/mysql-start.sh && knex migrate:latest",
+    "mysql:stop": "./bin/mysql-stop.sh",
+    "mysql:seed": "knex seed:run",
+    "mysql:reset": "knex migrate:rollback && knex migrate:latest",
+    "setup:dev": "npm install && npm-run-all mysql:stop mysql:start build"
   },
   "repository": {
     "type": "git",
@@ -63,6 +66,7 @@
     "eslint-plugin-standard": "^3.1.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.3",
+    "npm-run-all": "^4.1.3",
     "nyc": "^12.0.2",
     "sinon": "^6.1.4"
   }
