--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "joi": "^13.5.2",
     "knex": "^0.15.2",
     "mysql": "^2.16.0",
+    "objection": "^1.2.6",
     "ramda": "^0.25.0",
     "request-promise": "^4.2.2",
     "slug": "^0.9.1",
