--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,13 @@
 {
-  "presets": ["latest"],
-  "plugins": ["transform-object-rest-spread"]
+  "presets": [
+    ["env", {
+      "targets": {
+        "node": "current"
+      }
+    }]
+  ],
+  "plugins": [
+    ["transform-decorators-legacy"],
+    "transform-object-rest-spread"
+  ]
 }
