--- a/package.json
+++ b/package.json
@@ -47,14 +47,15 @@
     "ramda": "^0.25.0",
     "request-promise": "^4.2.2",
     "slug": "^0.9.1",
+    "uuid": "^3.3.2",
     "winston": "^3.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-latest": "^6.24.1",
     "chai": "^4.1.2",
     "concurrently": "^3.6.1",
     "dotenv": "^6.0.0",
